// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`offset pagination renders a pagination component 1`] = `
.c2 {
  box-sizing: border-box;
}

.c3 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c4 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  border-bottom: 1px solid #D9DCE9;
}

.c6:first-of-type {
  padding-left: 1.5rem;
}

.c6:last-of-type {
  padding-right: 1.5rem;
}

.c5 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c5:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

<table
  class="c0"
  id=":r12:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c2 c3 c4"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c2 c3 c4"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c2 c3 c4"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        SM13
      </td>
      <td
        class="c6"
      >
        [Sample] Smith Journal 13
      </td>
      <td
        class="c6"
      >
        25
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        DPB
      </td>
      <td
        class="c6"
      >
        [Sample] Dustpan & Brush
      </td>
      <td
        class="c6"
      >
        34
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        OFSUC
      </td>
      <td
        class="c6"
      >
        [Sample] Utility Caddy
      </td>
      <td
        class="c6"
      >
        45
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        CLC
      </td>
      <td
        class="c6"
      >
        [Sample] Canvas Laundry Cart
      </td>
      <td
        class="c6"
      >
        2
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        CGLD
      </td>
      <td
        class="c6"
      >
        [Sample] Laundry Detergent
      </td>
      <td
        class="c6"
      >
        29
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders a simple table 1`] = `
.c2 {
  box-sizing: border-box;
}

.c3 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c4 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c6 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  border-bottom: 1px solid #D9DCE9;
}

.c6:first-of-type {
  padding-left: 1.5rem;
}

.c6:last-of-type {
  padding-right: 1.5rem;
}

.c5 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c5:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

<table
  class="c0"
  id=":r0:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c2 c3 c4"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c2 c3 c4"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c2 c3 c4"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        SM13
      </td>
      <td
        class="c6"
      >
        [Sample] Smith Journal 13
      </td>
      <td
        class="c6"
      >
        25
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        DPB
      </td>
      <td
        class="c6"
      >
        [Sample] Dustpan & Brush
      </td>
      <td
        class="c6"
      >
        34
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        OFSUC
      </td>
      <td
        class="c6"
      >
        [Sample] Utility Caddy
      </td>
      <td
        class="c6"
      >
        45
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        CLC
      </td>
      <td
        class="c6"
      >
        [Sample] Canvas Laundry Cart
      </td>
      <td
        class="c6"
      >
        2
      </td>
    </tr>
    <tr
      class="c5"
    >
      <td
        class="c6"
      >
        CGLD
      </td>
      <td
        class="c6"
      >
        [Sample] Laundry Detergent
      </td>
      <td
        class="c6"
      >
        29
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`renders a table figure 1`] = `
.c0 {
  margin: 0;
  max-width: 100%;
  overflow-x: auto;
  white-space: nowrap;
}

@media (min-width:720px) {
  .c0 {
    white-space: normal;
  }
}

<figure
  class="c0"
/>
`;

exports[`selectable renders selectable actions and checkboxes 1`] = `
.c14 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c3 {
  box-sizing: border-box;
}

.c4 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  color: #313440;
  margin: 0 0 1rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5rem;
}

.c16:last-child {
  margin-bottom: 0;
}

.c17 {
  cursor: pointer;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c15 {
  margin-left: 0.5rem;
}

.c9 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c13 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: border-color,background,box-shadow,color,opacity;
  transition-property: border-color,background,box-shadow,color,opacity;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  box-sizing: border-box;
  border: 1px solid #D9DCE9;
  border-color: #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 1.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-bottom: 0.125rem;
  margin-top: 0.125rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1.25rem;
}

.c13:hover {
  border-color: #B4BAD1;
}

.c10:focus + .c12 {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c13 svg {
  opacity: 0;
}

.c1 {
  background-color: #FFFFFF;
  border-bottom: 1px solid #D9DCE9;
  border-top: 1px solid #D9DCE9;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  white-space: nowrap;
}

.c1:first-of-type {
  padding-left: 1.5rem;
}

.c1:last-of-type {
  padding-right: 1.5rem;
}

.c2 {
  width: 2.25rem;
  white-space: nowrap;
}

.c5 {
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c7 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0;
  border-bottom: 1px solid #D9DCE9;
}

.c7:first-of-type {
  padding-left: 0;
}

.c7:last-of-type {
  padding-right: 0;
}

.c18 {
  background-color: #FFFFFF;
  box-sizing: border-box;
  color: #313440;
  font-size: 1rem;
  padding: 0.75rem;
  border-bottom: 1px solid #D9DCE9;
}

.c18:first-of-type {
  padding-left: 1.5rem;
}

.c18:last-of-type {
  padding-right: 1.5rem;
}

.c8 {
  background-color: #FFFFFF;
  padding: 0 0.75rem;
}

.c8:first-of-type {
  padding-left: 1.5rem;
}

.c8:last-of-type {
  padding-right: 1.5rem;
}

.c6 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  display: table-row;
  background-color: transparent;
}

.c6:hover {
  background-color: #F6F7FC;
}

.c0 {
  border-color: transparent;
  border-spacing: 0;
  color: #313440;
  text-align: left;
  width: 100%;
}

<table
  class="c0"
  id=":r35:"
>
  <thead
    class=""
  >
    <tr>
      <th
        class="c1 c2"
      />
      <th
        class="c1"
        id="header-cell-0"
      >
        <div
          class="c3 c4 c5"
        >
          Sku
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-1"
      >
        <div
          class="c3 c4 c5"
        >
          Name
        </div>
      </th>
      <th
        class="c1"
        id="header-cell-2"
      >
        <div
          class="c3 c4 c5"
        >
          Stock
        </div>
      </th>
    </tr>
  </thead>
  <tbody
    class=""
  >
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r3d:"
            class="c10 c11"
            id=":r3c:"
            type="checkbox"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r3c:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r3c:"
              hidden=""
              id=":r3d:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        SM13
      </td>
      <td
        class="c18"
      >
        [Sample] Smith Journal 13
      </td>
      <td
        class="c18"
      >
        25
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r3g:"
            class="c10 c11"
            id=":r3f:"
            type="checkbox"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r3f:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r3f:"
              hidden=""
              id=":r3g:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        DPB
      </td>
      <td
        class="c18"
      >
        [Sample] Dustpan & Brush
      </td>
      <td
        class="c18"
      >
        34
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r3j:"
            class="c10 c11"
            id=":r3i:"
            type="checkbox"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r3i:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r3i:"
              hidden=""
              id=":r3j:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        OFSUC
      </td>
      <td
        class="c18"
      >
        [Sample] Utility Caddy
      </td>
      <td
        class="c18"
      >
        45
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r3m:"
            class="c10 c11"
            id=":r3l:"
            type="checkbox"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r3l:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r3l:"
              hidden=""
              id=":r3m:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        CLC
      </td>
      <td
        class="c18"
      >
        [Sample] Canvas Laundry Cart
      </td>
      <td
        class="c18"
      >
        2
      </td>
    </tr>
    <tr
      class="c6"
    >
      <td
        class="c7 c8"
      >
        <div
          class="c9"
        >
          <input
            aria-checked="false"
            aria-labelledby=":r3p:"
            class="c10 c11"
            id=":r3o:"
            type="checkbox"
          />
          <label
            aria-hidden="true"
            class="c12 c13"
            for=":r3o:"
          >
            <svg
              aria-hidden="true"
              class="c14"
              fill="currentColor"
              height="24"
              stroke="currentColor"
              stroke-width="0"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
              <path
                d="M9 16.17 5.53 12.7a.996.996 0 1 0-1.41 1.41l4.18 4.18c.39.39 1.02.39 1.41 0L20.29 7.71a.996.996 0 1 0-1.41-1.41z"
              />
            </svg>
          </label>
          <div
            class="c15"
          >
            <label
              class="c16 c17"
              for=":r3o:"
              hidden=""
              id=":r3p:"
            >
              Unselected
            </label>
          </div>
        </div>
      </td>
      <td
        class="c18"
      >
        CGLD
      </td>
      <td
        class="c18"
      >
        [Sample] Laundry Detergent
      </td>
      <td
        class="c18"
      >
        29
      </td>
    </tr>
  </tbody>
</table>
`;
